--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#b71c1c</item>
-        <item name="colorPrimaryDark">#b71c1c</item>
+        <item name="colorPrimaryDark">#991c1c</item>
         <item name="colorAccent">#2089b0</item>
 
     </style>
