--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -120,13 +120,12 @@
             android:layout_width="0dp"
             android:layout_height="25dp"
             android:layout_weight="3"
-            android:layout_marginTop="5dp"
             app:srcCompat="@drawable/delete"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Delete all"
+                android:text="Clear Data"
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
 
