--- a/app/src/main/res/layout/mytask_card.xml
+++ b/app/src/main/res/layout/mytask_card.xml
@@ -4,7 +4,9 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/tools"
+    android:background="@color/black"
+    >
 
 
 
@@ -24,6 +26,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/grey"
             >
 
             <ImageView
@@ -35,6 +38,7 @@
                 android:layout_height="@dimen/album_cover_height"
                 android:background="@drawable/selector"
                 android:clickable="true"
+                android:padding="4dp"
                 android:src="@drawable/grocery"
                 android:scaleType="fitXY"
                 android:onClick="funopen"
@@ -48,7 +52,7 @@
                 android:paddingLeft="@dimen/album_tasktopic_padding"
                 android:paddingRight="@dimen/album_title_padding"
                 android:paddingTop="@dimen/album_title_padding"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:text="Task name"
                 android:gravity="center"
                 android:textSize="20dp"
@@ -79,7 +83,7 @@
                 android:text="12/40"
                 android:layout_marginTop="5dp"
                 android:layout_centerHorizontal="true"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:gravity="center"
                 android:textSize="15dp"
                 android:layout_marginRight="20dp"
@@ -91,7 +95,7 @@
                 android:layout_width="30dp"
                 android:layout_height="55dp"
                 android:layout_alignParentRight="true"
-                android:background="@color/white"
+                android:background="@color/grey"
 
                 android:layout_alignParentBottom="true"
                 android:onClick="funoptions"
@@ -99,7 +103,7 @@
                 <ImageButton
                     android:id="@+id/overflow"
                     android:layout_width="20dp"
-                    android:background="@color/white"
+                    android:background="@color/grey"
                     android:scaleType="centerCrop"
                     android:layout_height="20dp"
                     android:src="@drawable/dots"
