--- a/app/src/main/res/drawable/backcolor.xml
+++ b/app/src/main/res/drawable/backcolor.xml
@@ -1,15 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-
     <gradient
-        android:angle="90"
-
-        android:endColor="#271680"
-        android:startColor="#ff0a58"
-
-        android:type="linear"/>
-
-    <corners
-        android:radius="0dp"/>
-
+        android:type="radial"
+        android:centerX="50%"
+        android:centerY="50%"
+        android:startColor="#FF000000"
+        android:centerColor="#FF000000"
+        android:endColor="#FF000000"
+        android:gradientRadius="30"/>
 </shape>
