--- a/app/src/main/res/drawable/backcolor2.xml
+++ b/app/src/main/res/drawable/backcolor2.xml
@@ -1,15 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-
     <gradient
-        android:angle="90"
-
-        android:endColor="#4828EB"
-        android:startColor="#ff0a58"
-
-        android:type="linear"/>
-
-    <corners
-        android:radius="0dp"/>
-
+        android:type="linear"
+        android:centerX="5%"
+        android:centerY="5%"
+        android:startColor="#FFFFFFFF"
+        android:centerColor="#FFFFFFFF"
+        android:endColor="#FF05C1FF"
+       />
 </shape>
