--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -9,5 +9,9 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="probeginners.whattodo.Navigation"
     tools:showIn="@layout/app_bar_navigation">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/abc"/>
 <include layout="@layout/recycler" android:id="@+id/include"></include>
 </RelativeLayout>
