--- a/app/src/main/res/layout/mytask_card.xml
+++ b/app/src/main/res/layout/mytask_card.xml
@@ -26,7 +26,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/backcolor"
+            android:background="@drawable/backcolor2"
             >
 
             <ImageView
@@ -38,11 +38,12 @@
                 android:layout_height="@dimen/album_cover_height"
                 android:background="@drawable/selector"
                 android:clickable="true"
-                android:padding="4dp"
+                android:padding="10dp"
                 android:src="@drawable/grocery"
                 android:scaleType="fitXY"
                 android:onClick="funopen"
                 />
+
 
             <TextView
                 android:id="@+id/title"
@@ -52,7 +53,7 @@
                 android:paddingLeft="@dimen/album_tasktopic_padding"
                 android:paddingRight="@dimen/album_title_padding"
                 android:paddingTop="@dimen/album_title_padding"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:text="Task name"
                 android:gravity="center"
                 android:textSize="20dp"
@@ -83,7 +84,7 @@
                 android:text="12/40"
                 android:layout_marginTop="5dp"
                 android:layout_centerHorizontal="true"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:gravity="center"
                 android:textSize="15dp"
                 android:layout_marginRight="20dp"
@@ -91,31 +92,7 @@
 
                 />
 
-            <RelativeLayout
-                android:layout_width="30dp"
-                android:layout_height="55dp"
-                android:layout_alignParentRight="true"
-                android:background="#ff0a58"
 
-                android:layout_alignParentBottom="true"
-                android:onClick="funoptions"
-                >
-                <ImageButton
-                    android:id="@+id/overflow"
-                    android:layout_width="20dp"
-                    android:background="#ff0a58"
-                    android:scaleType="centerCrop"
-                    android:layout_height="20dp"
-                    android:src="@drawable/dots"
-                    android:onClick="funoptions"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="2dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_alignParentBottom="true"
-
-                    />
-                />
-            </RelativeLayout>
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
