--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -47,7 +47,7 @@
             android:text="About the App"
             android:textSize="30dp"
             android:textStyle="bold"
-            android:textColor="@color/grey"
+            android:textColor="@color/black"
             />
         <View
             android:layout_width="match_parent"
@@ -64,7 +64,7 @@
             android:text="@string/aboutapp"
             android:textSize="20dp"
             android:textStyle="italic"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:layout_marginTop="20dp"
 
             />
@@ -82,13 +82,13 @@
             android:textStyle="bold"
 
             android:text="\nApp by:Shubham Juneja"
-            android:textColor="@color/white"
+            android:textColor="#FFFFF0"
 
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/grey"
+            android:textColor="#FFFFF0"
             android:textStyle="bold"
             android:text="supergeekdeveloper@gmail.com\n\n"/>
         </LinearLayout>
