--- a/app/src/main/res/layout/othertask_card.xml
+++ b/app/src/main/res/layout/othertask_card.xml
@@ -29,6 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="16"
+            android:id="@+id/open"
             >
         <TextView
             android:layout_width="wrap_content"
