--- a/app/src/main/res/layout/activity_scheduled_task.xml
+++ b/app/src/main/res/layout/activity_scheduled_task.xml
@@ -26,29 +26,31 @@
 
     </android.support.design.widget.AppBarLayout>
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_below="@+id/appbarlayout1"
-    android:background="@drawable/back9"
-    >
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/myfav"
-        android:id="@+id/image5"
-        android:layout_centerHorizontal="true"
-        />
-    <android.support.v7.widget.RecyclerView
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recycler_view"
-        android:layout_below="@+id/image5"
+        android:layout_below="@+id/appbarlayout1"
+        android:background="@drawable/back9"
+        >
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/alarmclock"
+            android:id="@+id/image5"
+            android:layout_marginTop="10dp"
+            android:layout_centerHorizontal="true"
+            />
+        <android.support.v7.widget.RecyclerView
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_below="@id/image5"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recycler_view"
 
 
-        />
-</RelativeLayout>
+
+            />
+    </RelativeLayout>
 </RelativeLayout>
