--- a/app/src/main/res/layout/mytask_card.xml
+++ b/app/src/main/res/layout/mytask_card.xml
@@ -2,7 +2,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="150dp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/tools"
     android:background="@color/black"
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_height="@dimen/album_cover_height"
+                android:layout_height="100dp"
                 android:background="@drawable/selector"
                 android:clickable="true"
                 android:padding="5dp"
