--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -5,5 +5,6 @@
         android:id="@+id/addlist"
         android:orderInCategory="100"
         android:title="Add  List"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        />
 </menu>
