--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">#f44336</item>
         <item name="colorPrimaryDark">#e53935</item>
         <item name="colorAccent">#f44336</item>
-
+        <item name="showcaseViewStyle">@style/CustomShowcaseTheme</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -38,6 +38,12 @@
     </style>
 
 
-
-
+    <style name="CustomShowcaseTheme" parent="ShowcaseView.Light">
+        <item name="sv_backgroundColor">#33ffbb33</item>
+        <item name="sv_buttonBackgroundColor">#CF3119</item>
+        <item name="sv_buttonText">Close</item>
+    </style>
+    <style name="CustomAppTheme" parent="android:Theme.Light">
+        <item name="showcaseViewStyle">@style/CustomShowcaseTheme</item>
+    </style>
 </resources>
