--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,8 +42,15 @@
         <item name="sv_backgroundColor">#33ffbb33</item>
         <item name="sv_buttonBackgroundColor">#CF3119</item>
         <item name="sv_buttonText">Close</item>
+        <item name="sv_titleTextAppearance">@style/CustomTitle</item>
+        <item name="sv_detailTextAppearance">@style/CustomDetailText</item>
     </style>
-    <style name="CustomAppTheme" parent="android:Theme.Light">
-        <item name="showcaseViewStyle">@style/CustomShowcaseTheme</item>
+    <style name="CustomTitle" parent="TextAppearance.ShowcaseView.Title">
+        <item name="android:textColor">#00801A</item>
     </style>
+
+    <style name="CustomDetailText" parent="TextAppearance.ShowcaseView.Detail">
+        <item name="android:textColor">#00801A</item>
+    </style>
+
 </resources>
