--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -22,232 +22,26 @@
 
 
     </android.support.design.widget.AppBarLayout>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/appbarlayout"
-        android:background="@drawable/back9"
-        >
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:orientation="vertical"
+        android:background="@drawable/back9"
+        android:layout_below="@+id/appbarlayout"
         >
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="5"
-                android:text="Option"
-                android:textColor="@color/black"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="10"
-                android:text="Usage"
-                android:textColor="@color/black"
-                android:textAlignment="center"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/black"></View>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:weightSum="20"
-            >
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="6"
-                android:text="Add List"
-                android:textColor="@color/black"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="12"
-                android:textColor="@color/black"
-                android:text="To create a new list to hold jobs of similar type"
-                android:textAlignment="center"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/black"></View>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:weightSum="20"
-            >
-            <android.support.design.widget.FloatingActionButton
-                android:layout_width="0dp"
-                android:layout_weight="5"
-                android:text="Add List"
-
-                android:scaleType="fitStart"
-                android:clickable="false"
-                android:src="@drawable/floater"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="12"
-                android:layout_marginLeft="70dp"
-                android:textColor="@color/black"
-
-                android:text="To add a task in Inbox of any category.It is faster to add through this "
-                android:textAlignment="center"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/black"></View>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:weightSum="20"
-            >
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="6"
-                android:text="Add List"
-                android:scaleType="fitStart"
-                android:src="@drawable/alarmon"
-
-                android:layout_height="40dp" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="12"
-                android:textColor="@color/black"
-
-                android:text="Alarm is On. \nClick to turn it Off. "
-                android:textAlignment="center"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/black"></View>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:weightSum="20"
-            >
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="6"
-                android:text="Add List"
-                android:scaleType="fitStart"
-                android:src="@drawable/alarmoff"
-
-                android:layout_height="40dp" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="12"
-                android:textColor="@color/black"
-
-                android:text="Alarm is Off. \nClick to turn it On. "
-                android:textAlignment="center"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/black"></View>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:weightSum="20"
-            >
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="6"
-                android:text="Add List"
-                android:scaleType="fitStart"
-                android:src="@drawable/favourite"
-
-                android:layout_height="40dp" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="12"
-                android:textColor="@color/black"
-
-                android:text="Click this to mark your task as favourite. "
-                android:textAlignment="center"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/black"></View>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:weightSum="20"
-            >
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="6"
-                android:text="Add List"
-                android:scaleType="fitStart"
-                android:src="@drawable/heart"
-
-                android:layout_height="40dp" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="12"
-                android:textColor="@color/black"
-
-                android:text="Click this to unmark your task as favourite. "
-                android:textAlignment="center"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/black"></View>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_weight="12"
-            android:text="**Long press any list/Task to delete them.**\n\n "
-            android:textAlignment="center"
-            android:textColor="@color/black"
-
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-</RelativeLayout>
-    </ScrollView>
-</RelativeLayout>
+            android:src="@drawable/needhelp"
+            android:layout_centerInParent="true"
+            android:alpha="0.3"
+            />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start   tutorial"
+        android:onClick="start"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_centerInParent="true"
+        />
+    </RelativeLayout>
+    </RelativeLayout>
