--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,18 +39,22 @@
 
 
     <style name="CustomShowcaseTheme" parent="ShowcaseView.Light">
-        <item name="sv_backgroundColor">#33ffbb33</item>
+        <item name="sv_backgroundColor">#90234A56</item>
         <item name="sv_buttonBackgroundColor">#CF3119</item>
         <item name="sv_buttonText">Close</item>
         <item name="sv_titleTextAppearance">@style/CustomTitle</item>
         <item name="sv_detailTextAppearance">@style/CustomDetailText</item>
     </style>
     <style name="CustomTitle" parent="TextAppearance.ShowcaseView.Title">
-        <item name="android:textColor">#00801A</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">30dp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="CustomDetailText" parent="TextAppearance.ShowcaseView.Detail">
-        <item name="android:textColor">#00801A</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textStyle">italic</item>
     </style>
 
 </resources>
