--- a/app/src/main/res/menu/newtaskmenu2.xml
+++ b/app/src/main/res/menu/newtaskmenu2.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:title="settings"
-        app:showAsAction="never">
+    <item android:title="0"
+        android:id="@+id/delcount"
+        app:showAsAction="always">
     </item>
+    <item android:title="Delete"
+        app:showAsAction="always"
+        android:icon="@drawable/delete"
+        ></item>
 </menu>
