--- a/app/src/main/res/layout/activity_favourite.xml
+++ b/app/src/main/res/layout/activity_favourite.xml
@@ -7,18 +7,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:onClick="dun"
     >
 
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:id="@+id/appbarlayout1"
+        android:onClick="dun"
         android:theme="@style/AppTheme.AppBarOverlay">
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            android:onClick="dun"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             android:weightSum="1">
 
@@ -30,6 +33,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_below="@+id/appbarlayout1"
+    android:onClick="dun"
     android:background="@drawable/back9"
     >
     <ImageView
@@ -37,6 +41,7 @@
         android:layout_height="100dp"
         android:src="@drawable/myfav"
         android:id="@+id/image5"
+        android:onClick="dun"
         android:layout_centerHorizontal="true"
         />
     <android.support.v7.widget.RecyclerView
@@ -44,7 +49,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/recycler_view"
         android:layout_below="@+id/image5"
 
