--- a/app/src/main/res/layout/activity_scheduled_task.xml
+++ b/app/src/main/res/layout/activity_scheduled_task.xml
@@ -7,12 +7,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:onClick="dun"
     >
 
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:id="@+id/appbarlayout1"
+        android:onClick="dun"
         android:theme="@style/AppTheme.AppBarOverlay">
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -20,6 +22,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:onClick="dun"
             android:weightSum="1">
 
         </android.support.v7.widget.Toolbar>
@@ -31,12 +34,14 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/appbarlayout1"
         android:background="@drawable/back9"
+        android:onClick="dun"
         >
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/alarmclock"
             android:id="@+id/image5"
+            android:onClick="dun"
             android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true"
             />
@@ -46,7 +51,7 @@
             android:layout_marginTop="10dp"
             android:layout_below="@id/image5"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/recycler_view"
 
 
