--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -11,6 +11,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:onClick="dun"
         android:background="@drawable/back9"/>
 <include layout="@layout/recycler" android:id="@+id/include"></include>
 </RelativeLayout>
